--- a/src/main/resources/templates/account/findUser.html
+++ b/src/main/resources/templates/account/findUser.html
@@ -9,7 +9,7 @@
 		
 			<div class="contents">
 		
-				<div class="input-box mb-4 border">
+				<div class="input-box mb-4">
 					
 					<div class="info-btn btn-lgn border border-dark border-bottom-0  d-flex align-items-center justify-content-center">
 						<h3>내 계정 찾기</h3>
@@ -21,46 +21,60 @@
 							 -->
 				<div class="outline">
 					<div>
-						<h4>아이디 / 비밀번호 찾기</h4>
+						<h4>아이디 찾기</h4>
 					</div>
 				
-				<button type="button" class="btn  btn-lgn btn-outline-secondary my-2">회원 정보에 등록된 이메일로 찾기</button>
-					<!--  버튼 누르면 인풋창 show -->
-					<div class="findbyEmail">
-						<div>
-							<input type="text" class="form-control my-2 userNameInput" placeholder="이름">
+				<div>
+					<button type="button" class="btn  btn-lgn btn-outline-secondary my-2">회원 정보에 등록된 이메일로 찾기</button>
+						<!--  버튼 누르면 인풋창 show -->
+						<div id="findbyEmail" class="d-none" >
+							<div>
+								<input type="text" class="form-control my-2 userNameInput" placeholder="이름">
+							</div>
+							<div>
+								<input type="text" class="form-control my-2 findInfoInput" placeholder="이메일">
+							</div>
+							<div class="d-flext justify-content-end my-2">
+								<button class="btn btn btn-outline-secondary">찾기</button>
+							</div>
 						</div>
-						<div>
-							<input type="text" class="form-control my-2 findInfoInput" placeholder="이메일">
-						</div>
-						<div class="d-flext justify-content-end my-2">
-							<button class="btn btn btn-outline-secondary">찾기</button>
-						</div>
-					</div>
-				
-				<button type="button" class="btn btn-lgn btn-outline-secondary my-2">회원 정보에 등록된 휴대폰으로 찾기</button>
-					<!--  버튼 누르면 인풋창 show -->
-					<div id="#findbyPhone">
-						<div>
-							<input type="text" class="form-control my-2 userNameInput" placeholder="이름">
-						</div>
-						<div>
-							<input type="text" class="form-control my-2 findInfoInput" placeholder="휴대폰 번호" >
-						</div>
-						<div class="d-flext justify-content-end my-2">
-							<button class="btn btn btn-outline-secondary findBtn" >찾기</button>
-						</div>
-					</div>
-				
-				<!-- 
-				<div class="border btn-lgn">
-					<h4>새로운 비밀번호 설정하기</h4>
 				</div>
-				 -->
+					
+					
+				<div>
+					<button type="button" class="btn btn-lgn btn-outline-secondary my-2">회원 정보에 등록된 휴대폰으로 찾기</button>
+						<!--  버튼 누르면 인풋창 show -->
+						<div id="findbyPhone" class="d-none">
+							<div>
+								<input type="text" class="form-control my-2 userNameInput" placeholder="이름">
+							</div>
+							<div>
+								<input type="text" class="form-control my-2 findInfoInput" placeholder="휴대폰 번호" >
+							</div>
+							<div class="d-flext justify-content-end my-2">
+								<button class="btn btn btn-outline-secondary findBtn" >찾기</button>
+							</div>
+						</div>
+				</div>
+	
+				<div>
+					<button type="button" class="btn btn-lgn btn-outline-secondary my-2">비밀번호 재설정</button>
+						<div id="updatePw" class="d-none">
+							<h5 class="font-weight-bold mt-4">새로운 비밀번호를 설정해주세요</h5>
+							<div>
+								<input type="password" placeholder="비밀번호" id="newPwInput" class="form-control my-2">
+							</div>
+							<div>
+								<input type="password" placeholder="비밀번호 확인" id="newPwConfirmInput" class="form-control my-2">
+							</div>
+							<div>
+								<button type="button" class="btn btn-success mb-4">설정완료</button>
+							</div>
+						</div>
+				</div>
 	
 				</div>
 			</div>
-				
 				
 				
 				
@@ -72,7 +86,7 @@
 					</div>
 					<a href="/nunubooks/account/login" class="btn btn-outline-secondary mb-4">로그인</a>
 				</div>
-				
+				<!-- 
 				<div class="col-4 border">
 					<div class="my-4">
 						<span>고객님이 설정하신 비밀번호는 </span>
@@ -81,14 +95,9 @@
 					</div>
 					<a href="/nunubooks/account/login" class="btn btn-outline-secondary mb-4">로그인</a>
 				</div>
+				 -->
 				
 				
-				<div class="col-4 border">
-					<h5 class="font-weight-bold mt-4">새로운 비밀번호를 설정해주세요</h5>
-					<input type="password" placeholder="비밀번호" id="newPwInput" class="form-control my-2">
-					<input type="password" placeholder="비밀번호 확인" id="newPwConfirmInput" class="form-control my-2">
-					<button type="button" class="btn btn-success mb-4">설정완료</button>
-				</div>
 			<!-- ↓ -->	
 				<div class="col-4 border">
 					<div class="my-3">새로운 비밀번호 설정이 완료되었습니다.</div>
@@ -122,7 +131,14 @@
 					type:"post"
 					,url:"/user/findId"
 					,data:{"name":name,"userInfo":userInfo}
-					,success:function(){}
+					,success:function(response){
+
+						if(response.result=="success"){
+
+						} else{
+
+						}
+					}
 					,error:function(){}
 				});
 			
