[배지현] - url funciton에서 baseUrl 불일치로 인한 404 에러 처리 완료. - 현재가 달의 1째주인 경우 0주로 계산되던 오류 수정 #11

--- a/src/main/resources/templates/books/best-seller.html
+++ b/src/main/resources/templates/books/best-seller.html
@@ -178,7 +178,7 @@ $(document).ready(function(){
 		const outofStock = $("#outofStockSel").val() || 0;
 		const queryType = $(".queryType").data("query-id") || 'Bestseller'; 
     	
-		const baseUrl = "/nunubooks/bestSeller";
+		const baseUrl = "/nunubooks/books";
 	    // history.pushState() 새로고침 안되게함
 //	    history.pushState(null, null, baseUrl 
 		
