[배지현] - 베스트셀러 카테고리 변경 - footer 수정 - 페이지네이션 재구성중

--- a/src/main/resources/templates/books/best-seller.html
+++ b/src/main/resources/templates/books/best-seller.html
@@ -13,10 +13,9 @@
 		
 				<nav class="nav flex-column col-2 border-right text-center mr-4">
 					<h3 class="bg-secondary font-weight-bold my-4">국내도서</h3>
-					  <a class="nav-link text-dark" href="#">카테고리1</a>
-					  <a class="nav-link text-dark" href="#">카테고리2</a>
-					  <a class="nav-link text-dark" href="#">카테고리3</a>
-					  <a class="nav-link text-dark" href="#">카테고리4</a>
+					  <a class="nav-link text-dark" href="/nunubooks/books?queryType=ItemNewAll">신간도서</a>
+					  <a class="nav-link text-dark" href="/nunubooks/books?queryType=ItemNewSpecial">화제의신간</a>
+					  <a class="nav-link text-dark" href="/nunubooks/books?queryType=Bestseller">베스트셀러</a>
 				</nav>
 		
 		
