--- a/src/main/resources/templates/books/searchList.html
+++ b/src/main/resources/templates/books/searchList.html
@@ -136,6 +136,7 @@
 	
 		
 		//페이지네이션
+		// start가 한 페이지에 시작되는 리스트의 갯수 번호가 아니라 페이지 번호임!!!!!!!이걸 수정해서 다시 만들어야함... .ㅠ..ㅠ.ㅠ.ㅠ.ㅠ.ㅠ.ㅠ.ㅠ. 
 		
 		const totalResults = parseInt($("#totalResults").text()) || 0;
 		let maxResults = parseInt($("#maxResultSel").val())|| 10;
