--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -1,3 +1,3 @@
 <footer class="d-flex align-items-center justify-content-center">
-			<div>COPYRIGHT © nunuBooks INC. ALL RIGHTS RESERVED.</div>
+			<div>COPYRIGHT nunuBooks INC. and Aladin Communication ALL RIGHTS RESERVED.</div>
 </footer>
