[배지현] - 비밀번호 찾기 -> 임시비밀번호 발급으로 변경 예정 #2

--- a/src/main/resources/templates/account/findUser.html
+++ b/src/main/resources/templates/account/findUser.html
@@ -84,7 +84,7 @@
 	
 				</div>
 			</div>
-				
+				<!--  비밀번호 설정은 임시비밀번호로 바꾸기...  -->
 				<!-- Modal --> <!-- data-toggle="modal" data-target="#moreModal" -->
 		<div class="modal fade" id="moreModal1" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
 		  <div class="modal-dialog modal-dialog-centered" role="document">
