--- a/src/main/resources/templates/order/cart.html
+++ b/src/main/resources/templates/order/cart.html
@@ -84,7 +84,7 @@
 									</div>
 									<div class="d-flex align-items-center justify-content-center cart-price">
 										<div>
-											<h6 class="font-weight-bold  text-center my-4" id="price" th:text="|${#numbers.formatInteger(item.priceSales, 3, 'COMMA')} 원|">18,000 원</h6>
+											<h6 class="font-weight-bold  text-center my-4 priceUpdate" id="price" th:text="|${#numbers.formatInteger(item.priceSales, 3, 'COMMA')} 원|" th:data-price="${#numbers.formatInteger(item.priceSales, 3, 'COMMA')}">18,000 원</h6>
 											<div class="d-flex align-items-center justify-content-center bg-light border rounded border-secondary">
 												<button type="button" class="btn btn-0 subBtn" th:data-cart-id="${cart.id}" th:data-quantity-id="${cart.quantity}">-</button>
 												<div class="mx-1 qty" th:text="${cart.quantity}">1</div>
@@ -211,6 +211,7 @@
 					quantity--;
 			        $(this).data("quantity-id", quantity); // data-quantity-id 업데이트
 			        $(this).siblings(".qty").text(quantity); // 화면에 수량 업데이트
+			        
 
 			        // 서버에 수량 업데이트 요청
 			        $.ajax({
@@ -265,7 +266,6 @@
 				
 				$(this).data("quantity-id", quantity); // 업데이트된 수량 저장
 			    $(this).siblings(".qty").text(quantity); // 화면에 수량 반영
-				
 			    
 		        $.ajax({
 		            type: "put",
