[배지현] - 결제방식 셀렉트박스 삭제

--- a/src/main/resources/templates/order/order-page.html
+++ b/src/main/resources/templates/order/order-page.html
@@ -108,6 +108,7 @@
 								</div>
 							</div>
 						</div>
+						<!-- 
 						<div id="creditBox">
 							<div class="my-3 d-flex">
 								<select class="form-control w-25" id="creditCardSel">
@@ -126,7 +127,7 @@
 						</div>
 						
 						<div class="d-none" id="bankBox">
-							<div class="my-3 d-flex"> <!-- d-none 되어야함 -->
+							<div class="my-3 d-flex"> 
 								<select class="form-control w-25" id="bankSel">
 									<option>은행을 선택해주세요</option>
 									<option>국민은행</option>
@@ -136,6 +137,7 @@
 								<input type="text" class="form-control w-25 ml-3 " placeholder="입금자명" id="depositorInput">
 							</div>
 						</div>
+						 -->
 					
 					</div><!-- 박스 안에서 마진값 전체로 주는 역할 -->
 				</div>
