[배지현] - order 로직 수정중 #7

--- a/src/main/resources/templates/order/order-page.html
+++ b/src/main/resources/templates/order/order-page.html
@@ -378,7 +378,10 @@
 				    		,dataType: 'json'
 				    		,data: {
 					    		imp_uid : rsp.imp_uid
-					    		//기타 필요한 데이터가 있으면 추가 전달
+				    		//기타 필요한 데이터가 있으면 추가 전달
+					           // merchant_uid: rsp.merchant_uid,
+					           // amount: finalPrice + shippingFee
+					           
 				    		}
 				    	}).done(function(data) {
 				    		//[2] 서버에서 REST API로 결제정보확인 및 서비스루틴이 정상적인 경우
@@ -388,7 +391,6 @@
 				    			msg += '\n상점 거래ID : ' + rsp.merchant_uid;
 				    			msg += '\결제 금액 : ' + rsp.paid_amount;
 				    			msg += '카드 승인번호 : ' + rsp.apply_num;
-				    			
 				    			alert(msg);
 				    		} else {
 				    			//[3] 아직 제대로 결제가 되지 않았습니다.
@@ -408,7 +410,16 @@
 
 
 	//https://developers.portone.io/opi/ko/integration/start/v1/auth?v=v1
-			
+			/*
+			}).done(function(data) {
+			    if (data.result === "success") {
+		        alert('결제가 완료되었습니다.');
+		        window.location.href = "/nunubooks/order/complete";  // 결제 완료 페이지로 이동
+		    } else {
+		        alert('결제 검증 실패: ' + data.message);
+		    }
+		});
+			*/
 				
 			
 			
