--- a/src/main/resources/templates/order/order-page.html
+++ b/src/main/resources/templates/order/order-page.html
@@ -324,9 +324,23 @@
 
 		      let orderName = orderItems.join(", "); // 여러 상품일 경우 상품명 합치기
 
-			
-			
+		      const currentDate = new Date();
+		      //  각 구성 요소를 가져오기
+		      const year = currentDate.getFullYear(); // 2025
+		      const month = currentDate.getMonth() + 1; // 02
+		      const day = currentDate.getDate(); // 12
+		      const hours = currentDate.getHours(); // 18
+		      const minutes = currentDate.getMinutes(); //20
+		      const seconds = currentDate.getSeconds(); 
 		      
+			let auth = String(Math.floor(Math.random()*1000)).padStart(4,"0");
+		      
+			const merchant_uid = year + '' 
+								+ month.toString().padStart(2, "0") + '' 
+								+ day.toString().padStart(2, "0") + '' 
+								+ hours.toString().padStart(2, "0") + '' 
+								+ minutes.toString().padStart(2, "0") + '' 
+								+ auth;
 		      
 		      
 			console.log("name"+name
@@ -351,6 +365,8 @@
 			}
 			
 			
+			
+			
 			  IMP.init("imp51147044"); // 예: 'imp00000000'
 			  //IMP.agency("imp51147044", "티어코드"); // 예: 'imp00000000', '123'
 			
@@ -359,10 +375,11 @@
 				//등록된 PG사가 하나일 경우에는 미 설정시 기본 PG사가 자동으로 적용됩니다. 등록된 PG사가 여러개인 경우에는 html5_inicis 또는 inicis(ActiveX 방식일 경우)로 지정합니다.
 				channelKey: "channel-key-213771af-73f5-4e72-a8f6-690198da0bd3"    
 				,pay_method : "card"
-				    ,merchant_uid: 11 // 상점에서 관리하는 주문 번호를 전달
+				    ,merchant_uid:  merchant_uid // 상점에서 관리하는 주문 번호를 전달
 				    ,name : orderName
-				    ,amount : finalPrice + shippingFee
-				    ,buyer_email : 'iamport@siot.do'
+//				    ,amount : finalPrice + shippingFee
+				    ,amount : 100 // 최소 결제 금액 100원
+				//    ,buyer_email : 'iamport@siot.do' // 이메일 
 				    ,buyer_name : name
 				    ,buyer_tel : phone
 				    ,buyer_addr : address
@@ -403,11 +420,64 @@
 				        
 				        alert(msg);
 				    }
-				    
+				    console.log(
+				    		
+							"channelKey:" +  "channel-key-213771af-73f5-4e72-a8f6-690198da0bd3"    
+								,"pay_method : " + "card"
+								    ,"merchant_uid: "+ merchant_uid // 상점에서 관리하는 주문 번호를 전달
+								    ,"name : "+ orderName
+								    ,"amount : "+ finalPrice + shippingFee
+								    ,"imp_uid : "+ rsp.imp_uid
+				//				    ,"buyer_email : "+'iamport@siot.do'
+								    ,"buyer_name :"+ name
+								    ,"buyer_tel : "+phone
+								    ,"buyer_addr : "+address
+								    ,"buyer_postcode : "+postcode
+							); 
 			
 				    
 				});
 
+				    	
+		/*		    	
+				$.ajax({
+
+					type:"post"
+					,url:"/order/order-add"
+					,data:{
+						"name":name
+						,"phoneNumber":phone
+						,"postcode":postcode
+						,"address":address
+						,"totalPrice":finalPrice
+						,"shippingFee":shippingFee
+						,"payments":payments
+						,"point":point // 적립예정포인트
+						,"savePoint":savePoint // 적립예정포인트
+						,"impUid" : rsp.imp_uid
+						,"merchantUid" : merchant_uid
+						,"orderItemName" : orderName
+						}
+					,success:function(response){
+
+						if(response.result == "success"){
+
+							location.href="/nunubooks/order/order/complete";
+						} else {
+							alert("주문 실패")
+						}
+					}
+					,error:function(){
+					alert("주문 오류")
+					}
+				
+				});
+				
+		*/		
+				// 주문번호 생성 -> 생성된 번호를 db에 저장해주는 흐름으로 변경하기 
+
+				    	
+				    	
 
 	//https://developers.portone.io/opi/ko/integration/start/v1/auth?v=v1
 			/*
@@ -424,39 +494,6 @@
 			
 			
 			
-			/* 
-			$.ajax({
-
-				type:"post"
-				,url:"/order/order-add"
-				,data:{
-					"name":name
-					,"phoneNumber":phone
-					,"postcode":postcode
-					,"address":address
-					,"totalPrice":finalPrice
-					,"shippingFee":shippingFee
-					,"payments":payments
-					,"point":point // 적립예정포인트
-					,"savePoint":savePoint // 적립예정포인트
-					}
-				,success:function(response){
-
-					if(response.result == "success"){
-
-						location.href="/nunubooks/order/order/complete";
-					} else {
-						alert("주문 실패")
-					}
-				}
-				,error:function(){
-				alert("주문 오류")
-				}
-			
-			});
-	*/	
-			// 주문번호 생성 -> 생성된 번호를 db에 저장해주는 흐름으로 변경하기 
-
 			
 			
 			
