--- a/src/main/resources/templates/order/order-page.html
+++ b/src/main/resources/templates/order/order-page.html
@@ -332,6 +332,7 @@
 		      const hours = currentDate.getHours(); // 18
 		      const minutes = currentDate.getMinutes(); //20
 		      const seconds = currentDate.getSeconds(); 
+		      const milliseconds = currentDate.getMilliseconds();
 		      
 			let auth = String(Math.floor(Math.random()*1000)).padStart(4,"0");
 		      
@@ -339,7 +340,8 @@
 								+ month.toString().padStart(2, "0") + '' 
 								+ day.toString().padStart(2, "0") + '' 
 								+ hours.toString().padStart(2, "0") + '' 
-								+ minutes.toString().padStart(2, "0") + '' 
+								+ minutes.toString().padStart(2, "0") + ''
+								+ milliseconds.toString().padStart(3, "0") + ''
 								+ auth;
 		      
 		      
@@ -375,7 +377,7 @@
 				//등록된 PG사가 하나일 경우에는 미 설정시 기본 PG사가 자동으로 적용됩니다. 등록된 PG사가 여러개인 경우에는 html5_inicis 또는 inicis(ActiveX 방식일 경우)로 지정합니다.
 				channelKey: "channel-key-213771af-73f5-4e72-a8f6-690198da0bd3"    
 				,pay_method : "card"
-				    ,merchant_uid:  merchant_uid // 상점에서 관리하는 주문 번호를 전달
+				    ,merchant_uid: merchant_uid // 상점에서 관리하는 주문 번호를 전달
 				    ,name : orderName
 //				    ,amount : finalPrice + shippingFee
 				    ,amount : 100 // 최소 결제 금액 100원
@@ -386,6 +388,12 @@
 				    ,buyer_postcode : postcode
 				    //m_redirect_url : '{모바일에서 결제 완료 후 리디렉션 될 URL}' // 예: https://www.my-service.com/payments/complete/mobile
 				}, function(rsp) {
+
+					if (merchant_uid !== rsp.merchant_uid) {
+				        alert("결제 실패: 주문번호 불일치");
+				        return;
+				    }
+					
 				    if ( rsp.success ) {
 				    	//[1] 서버단에서 결제정보 조회를 위해 jQuery ajax로 imp_uid 전달하기
 //				    	jQuery.ajax({
@@ -396,12 +404,51 @@
 				    		,data: {
 					    		imp_uid : rsp.imp_uid
 				    		//기타 필요한 데이터가 있으면 추가 전달
-					           // merchant_uid: rsp.merchant_uid,
+					            ,merchant_uid: rsp.merchant_uid,
 					           // amount: finalPrice + shippingFee
 					           
 				    		}
 				    	}).done(function(data) {
 				    		//[2] 서버에서 REST API로 결제정보확인 및 서비스루틴이 정상적인 경우
+				    		
+				    		if(data.result ==="success"){
+
+				    			$.ajax({
+
+									type:"post"
+									,url:"/order/order-add"
+									,data:{
+										"name":name
+										,"phoneNumber":phone
+										,"postcode":postcode
+										,"address":address
+										,"totalPrice":finalPrice
+										,"shippingFee":shippingFee
+										,"payments":payments
+										,"point":point // 적립예정포인트
+										,"savePoint":savePoint // 적립예정포인트
+										,"impUid" : rsp.imp_uid
+	//									,"merchantUid" : merchant_uid
+										,"merchantUid" : rsp.merchant_uid
+										,"orderItemName" : orderName
+										}
+									,success:function(response){
+
+										if(response.result == "success"){
+
+											location.href="/nunubooks/order/order/complete";
+										} else {
+											alert("주문 실패")
+										}
+									}
+									,error:function(){
+									alert("주문 오류")
+									}
+								
+								});
+				    		}
+				    		
+				    		
 				    		if ( everythings_fine ) {
 				    			var msg = '결제가 완료되었습니다.';
 				    			msg += '\n고유ID : ' + rsp.imp_uid;
