--- a/src/main/resources/templates/order/order-page.html
+++ b/src/main/resources/templates/order/order-page.html
@@ -411,8 +411,17 @@
 				    	}).done(function(data) {
 				    		//[2] 서버에서 REST API로 결제정보확인 및 서비스루틴이 정상적인 경우
 				    		
-				    		if(data.result ==="success"){
+//				    		if(data.result ==="success"){
+				    		if(data.result ==="paid"){
 
+				    			var msg = '결제가 완료되었습니다.';
+				    			msg += '\n고유ID : ' + rsp.imp_uid;
+				    			msg += '\n상점 거래ID : ' + rsp.merchant_uid;
+				    			msg += '\결제 금액 : ' + rsp.paid_amount;
+				    			msg += '카드 승인번호 : ' + rsp.apply_num;
+				    			alert(msg);
+				    			
+				    			
 				    			$.ajax({
 
 									type:"post"
@@ -431,7 +440,7 @@
 	//									,"merchantUid" : merchant_uid
 										,"merchantUid" : rsp.merchant_uid
 										,"orderItemName" : orderName
-										}
+									}
 									,success:function(response){
 
 										if(response.result == "success"){
@@ -445,11 +454,33 @@
 									alert("주문 오류")
 									}
 								
+								}).fail(function() {
+								    alert("결제 검증 요청 실패");
 								});
-				    		}
+				    			
+				    		}else {
+						        var msg = '결제에 실패하였습니다.';
+						        msg += '에러내용 : ' + rsp.error_msg;
+						        
+						        alert(msg);
+						    }
+				    	 }).fail(function () {
+				                alert("결제 검증 요청 실패");
+				            });
+
+				        } else {
+				            var msg = '결제 실패';
+				            msg += '\n에러 내용: ' + (rsp.error_msg || "알 수 없는 오류");
+				            alert(msg);
+				        }
+				    		console.log("결제 응답 객체:", rsp);
+				    	  		
+				    	});  		
+				    	});  		
 				    		
-				    		
-				    		if ( everythings_fine ) {
+				 /*   	
+//				    		if ( everythings_fine ) {
+				    		if ( data.result === "success") {
 				    			var msg = '결제가 완료되었습니다.';
 				    			msg += '\n고유ID : ' + rsp.imp_uid;
 				    			msg += '\n상점 거래ID : ' + rsp.merchant_uid;
@@ -467,6 +498,7 @@
 				        
 				        alert(msg);
 				    }
+				    
 				    console.log(
 				    		
 							"channelKey:" +  "channel-key-213771af-73f5-4e72-a8f6-690198da0bd3"    
@@ -485,7 +517,7 @@
 				    
 				});
 
-				    	
+				 */   	
 		/*		    	
 				$.ajax({
 
@@ -536,17 +568,10 @@
 		        alert('결제 검증 실패: ' + data.message);
 		    }
 		});
-			*/
-				
-			
-			
-			
-			
-			
-			
-			
+
 			
 		});
+			*/
 		
 		
 		
