--- a/src/main/resources/templates/order/order-page.html
+++ b/src/main/resources/templates/order/order-page.html
@@ -316,6 +316,7 @@
 		
 			  // 주문 상품 정보
 		      let orderItems = [];
+			  
 		      $(".order-bookInfo").each(function () {
 		          let title = $(this).find(".order-book-title").text().trim();
 		          let quantity = $(this).find(".order-book-amount").text().replace("개", "").trim();
@@ -367,8 +368,7 @@
 			}
 			
 			
-			
-			
+
 			  IMP.init("imp51147044"); // 예: 'imp00000000'
 			  //IMP.agency("imp51147044", "티어코드"); // 예: 'imp00000000', '123'
 			
@@ -394,6 +394,99 @@
 				        return;
 				    }
 					
+				console.log(rsp);
+				
+				$.ajax({
+
+					type:"post"
+					,url:"/order/order-add"
+					,data:{
+						"name":name
+						,"phoneNumber":phone
+						,"postcode":postcode
+						,"address":address
+						,"totalPrice":finalPrice
+						,"shippingFee":shippingFee
+						,"payments":payments
+						,"point":point // 적립예정포인트
+						,"savePoint":savePoint // 적립예정포인트
+						,"impUid" : rsp.imp_uid
+//									,"merchantUid" : merchant_uid
+						,"merchantUid" : rsp.merchant_uid
+						,"orderItemName" : orderName
+					}
+					,success:function(response){
+
+						if(response.result == "success"){
+
+							alert("결제 성공")
+
+//							location.href="/nunubooks/order/order/complete";
+						} else {
+							alert("주문 실패" + rsp.error_msg)
+						}
+					}
+					,error:function(){
+					alert("주문 오류")
+					}
+				    			
+				
+				    	});  		//$.ajax({
+				    	});  		//IMP.request_pay({
+				
+		    	}); //$("#orderBtn").on("click",function(){ 
+				    			
+			
+				 /*   	
+				
+				 오더 테이블 수정하기...
+				 
+				 CREATE TABLE `order`(
+	`id` INT NOT NULL AUTO_INCREMENT PRIMARY KEY,
+    `userId` INT NOT NULL,
+    `orderItemName` VARCHAR(128) NOT NULL,
+    `name` VARCHAR(64) NOT NULL,
+    `phoneNumber` VARCHAR(64) NOT NULL,
+    `postcode` VARCHAR(64) NOT NULL,
+    `address` VARCHAR(128) NOT NULL,
+    `totalPrice` INT NOT NULL,
+    `shippingFee` INT NOT NULL,
+    `payments` VARCHAR(64) NOT NULL,
+    `point` INT,
+    `impUid` VARCHAR(64) NOT NULL, -- 포트원 결제 고유 id
+    `merchantUid` VARCHAR(64) NOT NULL, -- 주문번호
+    `createdAt` timestamp DEFAULT CURRENT_TIMESTAMP
+) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4;
+				 
+				 
+				 
+			  IMP.init("imp51147044"); // 예: 'imp00000000'
+			  //IMP.agency("imp51147044", "티어코드"); // 예: 'imp00000000', '123'
+			
+			  IMP.request_pay({
+//			    pg : 'inicis_v2', 
+				//등록된 PG사가 하나일 경우에는 미 설정시 기본 PG사가 자동으로 적용됩니다. 등록된 PG사가 여러개인 경우에는 html5_inicis 또는 inicis(ActiveX 방식일 경우)로 지정합니다.
+				channelKey: "channel-key-213771af-73f5-4e72-a8f6-690198da0bd3"    
+				,pay_method : "card"
+				    ,merchant_uid: merchant_uid // 상점에서 관리하는 주문 번호를 전달
+				    ,name : orderName
+//				    ,amount : finalPrice + shippingFee
+				    ,amount : 100 // 최소 결제 금액 100원
+				//    ,buyer_email : 'iamport@siot.do' // 이메일 
+				    ,buyer_name : name
+				    ,buyer_tel : phone
+				    ,buyer_addr : address
+				    ,buyer_postcode : postcode
+				    //m_redirect_url : '{모바일에서 결제 완료 후 리디렉션 될 URL}' // 예: https://www.my-service.com/payments/complete/mobile
+				}, function(rsp) {
+
+					if (merchant_uid !== rsp.merchant_uid) {
+				        alert("결제 실패: 주문번호 불일치");
+				        return;
+				    }
+					
+				console.log(rsp);
+				
 				    if ( rsp.success ) {
 				    	//[1] 서버단에서 결제정보 조회를 위해 jQuery ajax로 imp_uid 전달하기
 //				    	jQuery.ajax({
@@ -404,7 +497,7 @@
 				    		,data: {
 					    		imp_uid : rsp.imp_uid
 				    		//기타 필요한 데이터가 있으면 추가 전달
-					            ,merchant_uid: rsp.merchant_uid,
+					            ,merchant_uid: rsp.merchant_uid
 					           // amount: finalPrice + shippingFee
 					           
 				    		}
@@ -445,7 +538,9 @@
 
 										if(response.result == "success"){
 
-											location.href="/nunubooks/order/order/complete";
+											alert("결제 성공")
+
+//											location.href="/nunubooks/order/order/complete";
 										} else {
 											alert("주문 실패")
 										}
@@ -478,7 +573,6 @@
 				    	});  		
 				    	});  		
 				    		
-				 /*   	
 //				    		if ( everythings_fine ) {
 				    		if ( data.result === "success") {
 				    			var msg = '결제가 완료되었습니다.';
