[배지현] - 주문 완료 화면 수정 #6

--- a/src/main/resources/templates/order/order-complete.html
+++ b/src/main/resources/templates/order/order-complete.html
@@ -30,7 +30,11 @@
 					 	 <tr>
 					 	 	<td>
 						 	 	<span class="mr-1" >주문번호 : </span>
-						 	 	<span>0000-0000-0000 </span>
+						 	 	<span th:text="${merchantUid}">0000-0000-0000 </span>
+<!-- 
+						 	 	<a href="/nunubooks/order/orderInfo?">
+						 	 	</a>
+ -->
 					 	 	</td>
 					 	 </tr>
 				 	</tbody>
