[배지현] - orderId → 주문번호로 출력 변경. - 주문 정보 출력 완료 #6

--- a/src/main/resources/templates/order/order-complete.html
+++ b/src/main/resources/templates/order/order-complete.html
@@ -30,11 +30,9 @@
 					 	 <tr>
 					 	 	<td>
 						 	 	<span class="mr-1" >주문번호 : </span>
+						 	 	<a th:href="@{/nunubooks/order/orderInfo(merchantUid=${merchantUid})}" class="font-weight-bold text-success">
 						 	 	<span th:text="${merchantUid}">0000-0000-0000 </span>
-<!-- 
-						 	 	<a href="/nunubooks/order/orderInfo?">
 						 	 	</a>
- -->
 					 	 	</td>
 					 	 </tr>
 				 	</tbody>
